<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_apator"
        android:layout_width="132dp"
        android:layout_height="34dp"
        android:layout_gravity="end"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/apator_logo" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/login_screen_textfield_style"
        android:layout_marginTop="40dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopEnd="@dimen/textfield_radius"
        app:boxCornerRadiusTopStart="@dimen/textfield_radius"
        app:startIconDrawable="@drawable/ic_login"
        app:startIconTint="@drawable/selector_text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditText2"
        style="@style/login_screen_textfield_style"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopEnd="@dimen/textfield_radius"
        app:boxCornerRadiusTopStart="@dimen/textfield_radius"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@drawable/selector_text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/common_component_margin_horizontal"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:text="@string/remember_my_credentials"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/red"
        android:padding="8dp"
        android:text="zaloguj"
        android:textSize="18sp"
        app:cornerRadius="5dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/common_component_margin_horizontal"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/apator_rector_2022"
        android:textColor="@color/white"
        android:textSize="10dp" />

</androidx.appcompat.widget.LinearLayoutCompat>